[tool.poetry]
name = "pyminetesting"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
immutables = "^0.15"
aiofile = "^3.5.0"
aiohttp = "^3.7.4"
colorama = "^0.4.4"
cryptography = "^3.4.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
